# rtracer

./: Cargo.toml  scene_example.rts
src/: camera.rs  gamma_lut.rs  lib.rs  main.rs  material.rs  pcg.rs  render.rs  scene.rs  shaders.rs  shape.rs
src/bvh/: bvh_depth.rs  bvh_intersection.rs  bvh_node.rs  mod.rs
src/entity/: anchor.rs  bounds.rs  bvh.rs  bvh_depth.rs  hit.rs  hittable.rs  mod.rs  sphere.rs  triangle.rs
src/loaders/: mod.rs  model_loader.rs  scene_loader.rs
src/math/: extensions.rs  mod.rs  pcg.rs  ray.rs  vectors.rs
src/test_files/: TankVk3002M_ModelPhysicsBackup.mtl  scene.rts
src/textures/: extensions.rs  extensions_f32.rs  mod.rs  texture.rs
