[package]
name = "rtracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
#lto = true
codegen-units=1
opt-level = 3

[dependencies]
image = "0.24.6"
minifb = "0.24.0"
rayon = "1.7.0"
nalgebra = "0.32.2"